kubernetes/tasks-django/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-django
  namespace: tasks-reminder
  labels:
    app: tasks-django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks-django
  template:
    metadata:
      labels:
        app: tasks-django
    spec:
      containers:
        - name: tasks-django
          image: tasks-django:0.2.0
