kubernetes/tasks-django/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tasks-django-svc
  namespace: tasks-reminder
spec:
  selector:
    app: tasks-django
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
