kubernetes/tasks-django/ingress-cloud.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasks-ingress
  namespace: tasks-reminder
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: miloszk.pl
    http:
      paths:
      - backend:
          service:
            name: tasks-django-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - miloszk.pl
    secretName: ingress-local-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasks-ingress-http
  namespace: tasks-reminder
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: tasks-reminder-https-redirect@kubernetescrd
spec:
  rules:
  - host: miloszk.pl
    http:
      paths:
      - backend:
          service:
            name: tasks-django-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: tasks-reminder
spec:
  redirectScheme:
    scheme: https
    permanent: true
